# src/juice/CMakeLists.txt - juice sources CMake file
#
# This file is part of the juice open source project
#
# Copyright (c) 2019 - 2020 juice project authors
# Licensed under MIT License
#
# See https://github.com/juice-lang/juice/blob/master/LICENSE for license information
# See https://github.com/juice-lang/juice/blob/master/CONTRIBUTORS.txt for the list of juice project authors


add_subdirectory(AST)
add_subdirectory(Basic)
add_subdirectory(Diagnostics)
add_subdirectory(Driver)
add_subdirectory(Parser)
add_subdirectory(Sema)
